--- a/settings.json
+++ b/settings.json
@@ -6,13 +6,13 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
-"Dana":"6909137213", 
-"Pulsa":"6909137213", 
-"Ovo":"6909137213", 
+"BotName":"Veldora", 
+"NomorOwner":"6283819082780", 
+"NomorOwner2":"+62 838-1908-2780", 
+"NamaOwner":"Ryutenzo", 
+"Dana":"6283819082780", 
+"Pulsa":"6283819082780", 
+"Ovo":"6283819082780", 
 "ZeksApi":"twBHoFu3AnqfE6f2rwAuirfTVgh",
 "Zerkey":"ZeroYT7",
 "HunterApi":"Ikyy69"
